# Internet-Speed

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yaml  manage.py  pyproject.toml  setup.cfg
entrypoint/: entrypoint.sh  nginx.conf  test.sh  wait_for_db.sh
internet_speed/: __init__.py  apps.py  asgi.py  urls.py  wsgi.py
internet_speed/admin/: user.py
internet_speed/apis/v1/: router.py
internet_speed/apis/v1/serializers/: profile.py
internet_speed/apis/v1/views/: internet.py  profile.py
internet_speed/cron/: config.py  generate_reports.py  send_email.py  test_internet.py
internet_speed/managers/: user.py
internet_speed/migrations/: 0001_initial.py  0002_internet.py
internet_speed/mixins/: model.py
internet_speed/models/: __init__.py  internet.py  user.py
internet_speed/settings/: __init__.py  base.py  development.py  local.py  production.py  testing.py
internet_speed/speed_test/: speed_test.py
internet_speed/templates/: email_template.html  email_template.txt
internet_speed/utils/: db_utils.py
tests/: test_internet_speed.py
tests/apis/v1/serializers/: test_profile_serializer.py
tests/apis/v1/views/: test_profile_view.py
tests/managers/: test_user_manager.py
tests/models/: test_user_model.py
